--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"start": "sirv public"
 	},
 	"devDependencies": {
+		"@rollup/pluginutils": "^3.1.0",
 		"@rollup/plugin-commonjs": "^12.0.0",
 		"@rollup/plugin-node-resolve": "^8.0.0",
 		"prettier": "^2.0.5",
